--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="http://localhost:3000">
+      <a class="navbar-brand" href="https://klinik-tongfang.herokuapp.com">
         <img src="/assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Tong Fang
       </a>
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:3000">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://klinik-tongfang.herokuapp.com">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -47,10 +47,10 @@
       </form> --}}
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:3000/regisUser">Register</a>
+          <a class="nav-link" href="https://klinik-tongfang.herokuapp.com/regisUser">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:3000/Login">Login</a>
+          <a class="nav-link" href="https://klinik-tongfang.herokuapp.com/Login">Login</a>
         </li>
       </ul>
     </div>
