--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,15 @@
-<div>
+{{!-- <div class="alert alert-warning alert-dismissible show" role="alert">
+  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div> --}}
+
+<div style="margin-top: 70px;">
   <H1 style="height:400px; weight: 100%;">Test aja hehe</H1>
 </div>
+
+<script>
+  const home = document.getElementById('home')
+  home.classList.add("active");
+</script>
