--- a/views/layouts/navbar.handlebars
+++ b/views/layouts/navbar.handlebars
@@ -7,9 +7,9 @@
   <title>Klinik Tong Fang</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="https://klinik-tongfang.herokuapp.com">
         <img src="/assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Tong Fang
       </a>
@@ -18,27 +18,27 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item" >
-          <a class="nav-link" id="home" href="/" >Home <span class="sr-only">(current)</span></a>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="https://klinik-tongfang.herokuapp.com">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/test">Link</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Pelayanan
+            Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Cek Darah</a>
+            <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        {{!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> --}}
+        </li>
       </ul>
       {{!-- <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -46,10 +46,10 @@
       </form> --}}
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" id="registrasi" href="/regisUser">Register</a>
+          <a class="nav-link" id="registrasi" href="https://klinik-tongfang.herokuapp.com/regisUser">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Login">Login</a>
+          <a class="nav-link" href="https://klinik-tongfang.herokuapp.com/Login">Login</a>
         </li>
       </ul>
     </div>
@@ -58,24 +58,9 @@
   {{{body}}}
 
   <footer class="pt-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 mt-4 mt-md-3">
-          <img src="/assets/image/tongfang.jpeg" alt="Foto" class="img-thumbnail">
-          <h6>Klinik Tong Fang terpercaya</h6>
-        </div>
-        <div class="col-md-4 mt-4 mt-md-0">
-          Lokasi
-        </div>
-        <div class="col-md-4 mt-4 mt-md-0">
-          Kontak dll
-        </div>
-      </div>
-    </div>
     <div class="mt-5 mb-1 text-center" style="font-size: 0.7em;">
       Developed By <a target="_blank" href="https://github.com/alifnaufalyasin">Alif Naufal</a> & <a target="_blank" href="https://github.com/novitaguok">novita</a>  </div>
   </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
