--- a/views/regisUser.handlebars
+++ b/views/regisUser.handlebars
@@ -1,20 +1,38 @@
 
-<div>
-  <form action="/api/regisUser" name="form-register" style="padding: 30px;">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required  >
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" required>
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-  {{!-- <h2> {{nama}}</h2> --}}
+<div class="container" style="margin-top: 50px;">
+  <form action="/api/regisUser" method="POST" name="form-register" style="padding: 30px;">
+    <div class="form-group">
+      <label for="namaLengkap">Nama Lengkap</label>
+      <input type="text" class="form-control" id="namaLengkap" name="namaLengkap" required>
+    </div>
+    <div class="form-group">
+      <label for="alamat">Alamat</label>
+      <input type="text" class="form-control" id="alamat" name="alamat" required>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="tempatLahir">Tempat Lahir</label>
+        <input type="text" class="form-control" id="tempatLahir" name="tempatLahir" required>
+      </div>
+      <div class="form-group col-md-6">
+        <label for="tanggalLahir">Tanggal Lahir</label>
+        <input type="date" class="form-control" id="tanggalLahir" name="tanggalLahir" required>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email">Email address</label>
+      <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" required>
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" name="password" required>
+    </div>
+    <button type="submit" id="button" class="btn btn-primary">Submit</button>
+  </form>
 </div>
+
+<script>
+  const home = document.getElementById('registrasi')
+  home.classList.add("active");
+</script>
