--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
           <a class="nav-link" id="registrasi" href="/regisUser">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Login">Login</a>
+          <a class="nav-link" id="login" href="/login">Login</a>
         </li>
       </ul>
     </div>
@@ -75,7 +75,6 @@
     <div class="mt-5 mb-1 text-center" style="font-size: 0.7em;">
       Developed By <a target="_blank" href="https://github.com/alifnaufalyasin">Alif Naufal</a> & <a target="_blank" href="https://github.com/novitaguok">novita</a>  </div>
   </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
